# gapi/rpc_create_user.go
@@ -56,7 +56,7 @@ func (server *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest)
 		if pqErr, ok := err.(*pq.Error); ok {
 			switch pqErr.Code.Name() {
 			case "unique_violation":
-				return nil, status.Errorf(codes.AlreadyExists, "usernamd already exists: %s", err)
+				return nil, status.Errorf(codes.AlreadyExists, "username already exists: %s", err)
 			}
 		}
 
